@@ -182,8 +182,7 @@ public class KeyAllManager {
                 return loadRandomReward();
             default: {
                 SelectedKeyReward reward = loadRandomReward();
-                reward != null ? reward : loadOneKeyOnlyReward();
-                return break;
+                return reward != null ? reward : loadOneKeyOnlyReward();
             }
         }
     }
@@ -293,7 +292,7 @@ public class KeyAllManager {
     private SelectedKeyReward selectWeightedRandom(List<SelectedKeyReward> rewards) {
         int totalWeight = rewards.stream().mapToInt(reward -> Math.max(1, reward.weight())).sum();
         if (totalWeight <= 0) {
-            return rewards.getFirst();
+            return rewards.get(0);
         }
 
         int pick = random.nextInt(totalWeight) + 1;
@@ -305,7 +304,7 @@ public class KeyAllManager {
             }
         }
 
-        return rewards.getFirst();
+        return rewards.get(0);
     }
 
     private void executeConfiguredCommands(Player player, SelectedKeyReward reward) {
